# RP2040-HAT-LWIP-C

./: .gitmodules  CMakeLists.txt  README.md  getting_started.md  rp2040_hat_lwip_c-patch.cmake  rp2040_hat_lwip_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/dhcp_dns/: CMakeLists.txt  README.md  w5x00_dhcp_dns.c
examples/loopback/: CMakeLists.txt  README.md  w5x00_loopback.c
examples/loopback/tcp_echoclient/: tcp_echoclient.c  tcp_echoclient.h
examples/loopback/tcp_echoserver/: tcp_echoserver.c  tcp_echoserver.h
examples/lwiperf/: CMakeLists.txt  README.md  w5x00_lwiperf.c
patches/: 01_pico-extras_lwip_cmakelists.patch  02_pico-extras_lwip_dns.patch  03_pico-extras_lwip_opt.patch
port/: CMakeLists.txt
port/ioLibrary_Driver/src/: w5x00_spi.c
port/lwip/: lwipopts.h  w5x00_lwip.c  w5x00_lwip.h
